# claudio

./: .gitignore  README.html  README.md  index.html  launch-claudio.bat  launch-claudio.ps1  package-lock.json  package.json  vite.config.ts
docs/: mobile-known-issues.md  mobile-ui-optimization-spotify.md  mobile-ui-optimization.md
prompts/: dj-persona.md
public/prompts/: dj-persona.md
public/user/: memory.md  mod-rules.md  playlists.json  routines.md  taste.md
scripts/: copy-release.mjs
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/plugins/claudio-audio/: Cargo.toml
src-tauri/plugins/claudio-audio/src/: lib.rs
src-tauri/src/: audio_commands.rs  config.rs  lib.rs  netease.rs
src-tauri/src/netease_api/: mod.rs
src/components/: ErrorBoundary.tsx  Particles.tsx  Spinner.module.css  Spinner.tsx  TitleBar.module.css  TitleBar.tsx
src/components/Chat/: ChatBubble.module.css  ChatBubble.tsx
src/components/Player/: AudioPlayer.tsx  FavoritesButton.module.css  FavoritesButton.tsx  HistoryButton.module.css  HistoryButton.tsx  LyricDisplay.module.css  LyricDisplay.tsx  NowPlayingMini.module.css  NowPlayingMini.tsx  PlayControls.module.css  PlayControls.tsx  PlayerCard.module.css  PlayerCard.tsx  PlaylistsButton.module.css  PlaylistsButton.tsx  ProgressBar.module.css  ProgressBar.tsx  TTSIndicator.css  TTSIndicator.tsx  VolumeControl.module.css  VolumeControl.tsx
src/lib/: color-extract.ts  scheduler.ts  time.ts  tts.ts
src/lib/ai/: claude.ts  (+6 more)
src/styles/: design-spec.md  globals.css
user/: routines.md  taste.md
(+61 files in other folders)
